Suggest list updates per selected word

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <main>
       <input id="word-input" type="text" placeholder="Search Here">
-      <button class="submit-btn" id="search-btn" type="submit">Suggest</button>
+      <!-- <button class="submit-btn" id="search-btn" type="submit">Suggest</button> -->
     </main>
 
     <div class="word-suggest-box" id="word-suggest-box">
